# Rust-Console-UI-Hexagonal-Board

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/board/: mod.rs
src/board/adapter/input/: board_api.rs  mod.rs
src/board/adapter/input/request_form/: board_write_request_form.rs  mod.rs
src/board/adapter/input/response_form/: board_write_response_form.rs  mod.rs
src/board/adapter/output/in_memory/: board_in_memory_adapter.rs  board_repository.rs  in_memory_board.rs  mod.rs
src/board/application/: mod.rs
src/board/application/port/input/: mod.rs  update_board_command.rs  write_board_command.rs  write_board_result.rs  write_board_use_case.rs
src/board/application/port/output/: mod.rs  store_board_port.rs
src/board/application/services/: mod.rs  write_board_service.rs
src/board/domain/model/: board.rs  board_content.rs  board_id.rs  board_info.rs  board_title.rs  board_writer.rs  mod.rs
